SCRUM-2 Como admin, quero controlar permissões de acesso para cada tipo de usuário.